fix: spacing issue for articles and thoughts
remove vertical centering and add min height for no gaps in footer

--- a/src/components/pages/articles/articles.css
+++ b/src/components/pages/articles/articles.css
@@ -2,8 +2,8 @@
 .articles {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;*/
+    margin-top: 2rem;
     min-height: 76vh;
 }
 
